tests/fail_nightly/input_not_str.stderr
error[E0277]: the trait bound `usize: AsRef<str>` is not satisfied
   --> $DIR/input_not_str.rs:2:20
    |
2   |     sscanf::scanf!(5usize, "{}", usize);
    |                    ^^^^^^ the trait `AsRef<str>` is not implemented for `usize`
    |
note: required by `as_ref`
   --> $DIR/mod.rs:159:5
    |
159 |     fn as_ref(&self) -> &T;
    |     ^^^^^^^^^^^^^^^^^^^^^^^
